re PR c++/49043 ([OpenMP & C++0x]: Compiler error when lambda-function within OpenMP loop)

PR c++/49043
	* decl.c (check_omp_return): Stop searching on sk_function_parms.

	* testsuite/libgomp.c++/pr49043.C: New test.

From-SVN: r173907